--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,7 +132,7 @@ html {}
 .content {
   grid-area: content;
   display: grid;
-  grid-template-rows: repeat(9, 320vh);
+  grid-template-rows: repeat(9, 360vh);
   grid-template-columns: auto;
   grid-template-areas:
     "sun"
@@ -225,7 +225,7 @@ html {}
   justify-content: center;
   align-items: stretch;
   grid-template-columns: repeat(3,26vw);
-  grid-template-rows: repeat(3,20vh);
+  grid-template-rows: repeat(3,10rem);
   grid-template-areas:
     '1 2 3'
     '4 5 6'
